# nyy-kernel

./: .gdbinit  .gitignore  .gitmodules  DRIVERS.md  Kconfig  LICENSE  Makefile  README.md  build  config.template  meson.build  meson_options.txt  qemulog.txt  stacktrace.fish
crossfiles/: amd64.ini  gcc-riscv64.ini  linux.ini  riscv64.ini
freestanding/: meson.build
freestanding/ccrt/: generated  meson.build
freestanding/headers/: meson.build
kernel/: Kconfig  main.c  meson.build
kernel/acpi/: acpi.c  glue.c  kernel.c  meson.build
kernel/boot/: map.c  meson.build
kernel/devkit/: IOCatalog.cc  IOPlatformExpert.cc  IORegistry.cc  IORegistryEntry.cc  IOService.cc  dkit.c  meson.build  node.c
kernel/devkit/acpi/: acpi.c  glue.c  meson.build
kernel/devkit/include/DevKit/: Common.h  DevKit.h  IOCatalog.h  IOPlatformExpert.h  IORegistry.h  IORegistryEntry.h  IOService.h  acpi.h  console.h  pci.h
kernel/devkit/pci/: pci.c
kernel/dkit/: dkit.c  meson.build  pci.c
kernel/dkit/include/dkit/: acpi.h  pci.h
kernel/dkit/pci/: meson.build
kernel/include/: assert.h  inttypes.h  nanoprintf.h  string.h
kernel/include/dkit/: console.h  dkit.h
kernel/include/lib/: vmem.h
kernel/include/ndk/: addr.h  amd64.h  cpudata.h  dpc.h  event.h  irq.h  irql.h  kmem.h  mutex.h  ndk.h  obj.h  port.h  sched.h  softint.h  status.h  time.h  util.h  vm.h
kernel/include/ndk/internal/: boot.h  slab_impl.h  symbol.h
kernel/include/ndk/ports/: amd64.h  linux.h  riscv64.h
kernel/include/ndk/ports/amd64/: util.h
kernel/include/sys/: queue.h  tree.h  types.h
kernel/irq/: dpc.c  int.c  irq.c  irql.c  meson.build
kernel/lib/: cpudata.c  event.c  log.c  meson.build  mutex.c  panic.c  slab.c  stackguard.c  std.c  string.c  symbols.c  time.c  tinyubsan.c  vmem.c
kernel/libkern/: LICENSE.TXT  OSArray.cc  OSDictionary.cc  OSIterator.cc  OSMetaClass.cc  OSMetaClassBase.cc  OSObject.cc  OSString.cc  OSSymbol.cc  compiler.cc  init.cc  mem.cc  meson.build  object.cc  test.cc  test.cpp
kernel/libkern/include/: cassert  memory  string  string.hpp
kernel/libkern/include/libkern/: HashMap.h  Memory.h  OSArray.h  OSDictionary.h  OSIterator.h  OSMetaClass.h  OSObject.h  OSSharedPtr.h  OSString.h  OSSymbol.h  mutex.hpp  string.hpp
kernel/libkern/include/lk/: base.hpp  mutex.hpp  string.hpp
kernel/platform/amd64/: Kconfig  apic.c  apic.h  asm.h  cpuid.h  devkit.c  early_acpi.c  early_acpi.h  entry.c  gdt.c  hpet.c  hpet.h  int.c  linker.ld  meson.build  pci.c  pic.c  pic.h  sched.S  sched.c  start.S  string.S  stubs.S  tss.h  ultra.c  vm.c
kernel/platform/limine-generic/: Kconfig  entry.c  limine-generic.h  meson.build
kernel/platform/linux/: entry.c
kernel/platform/riscv64/: entry.c  linker.ld  meson.build
kernel/platform/riscv64-virt/: entry.c
kernel/sched/: dispatch.c  meson.build  sched.c
kernel/tests/: fireworks.c  fworktst.c  meson.build  mutextst.c  runner.c  test.h
kernel/vm/: Kconfig  buddy.c  heap.c  kmem.c  map.c  meson.build  pm.c
misc/: rv64.dtb  rv64.dts
platform/amd64/: entry.c  gdt.S  gdt.c  gdt.h  idt.h  int.c  linker.ld  meson.build  sched.c  string.S  stubs.S  tss.h  vm.c
platform/linux/: entry.c  meson.build
platform/riscv64-virt/: entry.c  linker.ld  meson.build
subprojects/: buddy_alloc.wrap  cc-runtime.wrap  flanterm.wrap  freestnd-c-hdrs.wrap  freestnd-cxx-hdrs.wrap  pairing_heap.wrap  uacpi.wrap  ultra_protocol.wrap
subprojects/packagefiles/buddy_alloc/: meson.build
subprojects/packagefiles/cc-runtime/: meson.build
subprojects/packagefiles/flanterm/: meson.build
subprojects/packagefiles/patches/buddy_alloc/: 0001.patch
subprojects/packagefiles/ultra_protocol/: meson.build
tools/: common.sh  gen-img.sh  gen-symmap.sh  hyper-amd64.cfg  limine-amd64.cfg  limine-amd64.conf  limine-riscv64.cfg  mkiso-amd64-hyper.sh  mkiso-amd64.sh  mkiso-riscv64.sh  run-amd64.sh  run-linux.sh  run-riscv64.sh
